--- a/style.css
+++ b/style.css
@@ -30,16 +30,102 @@ img{
     max-width: 100%;
     height: auto;
 }
+.page{
+    height: 100%;
+}
+.page-body {
+    min-height: 100%;
+    display: grid;
+    grid-template-rows: min-content 1fr min-content;
+    align-content: start;  
+}
+.main-header {
+    margin-bottom: 70px;
+}
+.main-header-logo {
+    order: 2;
+    width: 368px;
+    height: 153px;
+}
+.container {
+    width: 940px;
+    margin: 0 auto;
+    padding: 0 10px;
+}
+.main-navigation-wrapper .container {
+    display: flex;
+    justify-content: space-between;
+}
+.user-navigation {
+    max-width: 140px;
+}
+.user-navigation .login-link {
+    padding-left: 50px;
+}
+.features {
+    margin-bottom: 80px;
+}
+.features-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.features-item {
+    text-align: center;
+}
+.features-item p {
+    margin: 0 10px;
+}
+.inner-page .main-header{
+    background-color: var(--basic-black);
+}
 .main-navigation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-size: 16px;
     line-height: 20px;
     color: var(--basic-white);
     background-color: transparent;
 }
+.inner-page .main-navigation {
+    align-items: flex-start;
+    flex-direction: row;
+}
+.inner-page .main-header-logo {
+    order: 0;
+    width: 111px;
+    height: 24px;
+}
+.page-catalog .breadcrumbs {
+    outline: 5px solid #00ff12;
+    outline-offset: -5px;
+}
+.page-catalog {
+    display: grid;
+    grid-template-columns: 180px 1fr;
+    outline: 5px solid #303070;
+    outline-offset: -5px;
+    align-content: start;
+}
+.page-catalog .page-title {
+    outline: 5px solid #ff0090;
+    outline-offset: -5px;
+    grid-column: 1 / -1;
+}
 .main-navigation-wrapper {
+    width: 100%;
+    margin-bottom: 60px;
     background-color: var(--basic-black);
 }
 .site-navigation{
+    width: 620px;
+    margin: 0;
+    padding: 0;
+    min-height: 70px;
     list-style: none;
 }
 .main-navigation-current a:not([href]) {
@@ -55,6 +141,17 @@ img{
 .user-navigation a:focus {
     background-color: var(--basic-extra-dark);
 }
+.news {
+    width: 380px;
+    outline: 5px solid rgba(0, 255, 255, 0.7);
+    outline-offset: -5px;
+}
+.news-item {
+    margin-bottom: 25px;
+}
+.news-item p {
+    margin: 0;
+}
 .features-list {
     list-style: none;
 }
@@ -66,6 +163,9 @@ img{
     line-height: 42px;
 }
 .index-columns {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 35px;
     color: var(--basic-black);
     background-color: var(--basic-extra-light);
     background-image: url(/img/background-image.jpg);
@@ -73,17 +173,54 @@ img{
     background-repeat: no-repeat, repeat;
 }
 .index-columns h2 {
+    margin: 0;
+    margin-bottom: 25px;
     font-size: 30px;
     line-height: 42px;
 }
 .news-list {
     list-style: none;
 }
+.gallery {
+    width: 300px;
+}
+.gallery-container {
+    height: 260px;
+}
 .gallery-content {
+    height: 164px;
     background-color: var(--basic-dark);
     border: 7px solid var(--basic-white);
 }
+.gallery-content img {
+    width: 286px;
+    height: 164px;
+}
+.contacts {
+   width: 380px; 
+}
+.contacts p {
+    margin: 0;
+    margin-bottom: 25px;
+}
+.appointment {
+    width: 300px;
+}
+.appointment-info {
+    margin: 0;
+    margin-bottom: 15px;
+}
+.appointment-item {
+    margin-top: 0;
+    margin-bottom: 10px;
+}
+.appointment .button {
+    margin-top: 10px;
+    margin-right: 0;
+}
 .button {
+    display: inline-block;
+    margin-right: 16px;
     font: inherit;
     text-align: center;
     color: var(--basic-white);
@@ -103,20 +240,144 @@ img{
     opacity: 0.5;
     background-color: var(--basic-black);
 }
+.inner-page {
+    color: var(--basic-black);
+    background-color: var(--basic-extra-light);
+    background-image: url("../barbershop/img/background-image.jpg");
+    background-position: 0 0;
+    background-repeat: repeat;
+}
+.page-title{
+    font-size: 30px;
+    line-height: 42px;
+}
+.breadcrumbs{
+    list-style: none;
+}
+.breadcrumbs a {
+    color: var(--basic-black);
+}
+.breadcrumbs a:hover,
+.breadcrumbs a:focus {
+    text-decoration: underline;
+}
+.breadcrumbs-current {
+    color: var(--basic-dark);
+}
+.product-photo-preview {
+    list-style: none;
+}
+.product-photo-preview li {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+.product-photo-preview li:hover {
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+.product-photo-full {
+    display: block;
+    box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+}
+.product-article {
+    text-align: right;
+    color: var(--basic-dark);
+}
+.product-price b {
+    line-height: 20px;
+    text-align: center;
+    background-color: var(--basic-neutral);
+}
+.product-info h3 {
+    font-size: 24px;
+    line-height: 30px;
+}
+.product-info ul {
+    list-style: none;
+}
+.product-set-list {
+    list-style: none;
+}
+.filter legend {
+    font-size: 24px;
+    line-height: 30px;
+}
+.filter ul {
+    list-style: none;
+    line-height: 18px;
+}
+.filter-input-checkbox:hover + label,
+.filter-input-checkbox:focus + label {
+    color: var(--special);
+}
+.catalog-list {
+    list-style: none;
+}
+.catalog-item {
+    background-color: var(--basic-extra-light);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1)
+}
+.catalog-item a {
+    color: var(--basic-black);
+}
+.catalog-item h3 {
+    font-size: 14px;
+    line-height: 18px;
+}
+.catalog-category {
+    text-transform: none;
+}
+.catalog-item-price b {
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    background-color: var(--basic-neutral);
+}
+.catalog-item-price .button {
+    line-height: 20px;
+    color: var(--basic-white);
+}
+.pagination-list {
+    list-style: none;
+}
+.pagination-item a{
+    color: var(--basic-white);
+    background-color: var(--basic-black);
+}
+.pagination-item a:hover,
+.pagination-item a:focus,
+.pagination-item a:active {
+    background-color: var(--special);
+}
+.pagination-item-current a,
+.pagination-item-current a:hover,
+.pagination-item-current a:focus,
+.pagination-item-current a:active {
+    color: var(--basic-black);
+    background-color: var(--basic-white);
+}
 .appointment-item input {
     font: inherit;
     background-color: transparent;
-    border: 2px, solid var(--basic-black);
+    border: 2px solid var(--basic-black);
 }
 .appointment-item input :focus {
     border-color: var(--special);
 }
 .main-footer {
+    padding: 60px 0;
+    margin-top: 65px;
     color: var(--basic-white);
     background-color: var(--basic-extra-dark);
     background-image: url(/img/background-image-dark.jpg);
     background-position: 0 0;
     background-repeat: repeat;
+}
+.main-footer .container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+.footer-contacts {
+    margin: 0;
+    width: 320px;
 }
 .footer-contacts a {
     color: var(--basic-white);
@@ -127,10 +388,20 @@ img{
     text-decoration: none;
 }
 .footer-social {
+    width: 145px;
+    justify-self: center;
     text-align: center;
 }
-
+.footer-copyright {
+    max-width: 150px;
+    margin: 0;
+    justify-self: end;
+    text-align: center;
+}
 .footer-social ul {
+    width: 141px;
+    margin: 0 auto;
+    padding: 0;
     list-style: none;
 }
 .footer-social h2 {
@@ -154,11 +425,24 @@ img{
     background-image: url(/img/background-image.jpg);
     background-position: 0 0;
     background-repeat: repeat;
-    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7);
+    box-shadow: 0 30px 50px rgba(0, 0, 0, 0.7)
 }
 .modal-login h2 {
+    margin: 0;
+    margin-bottom: 20px;
     font-size: 30px;
     line-height: 42px;
+}
+.modal-description {
+    margin: 0;
+    margin-bottom: 10px;
+}
+.login-form p {
+    margin: 0;
+    margin-bottom: 10px;
+}
+.login-form .login-help {
+    margin: 15px 0;
 }
 .login-form input[type="email"]
 .login-form input[type="password"] {
@@ -172,7 +456,7 @@ img{
     border-color: var(--special); 
 }
 .login-icon-user {
-    background-image: url(/img/account.svg  );
+    background-image: url(/img/account.svg);
     background-position: 270px center;
     background-repeat: no-repeat;
 }
