--- a/normalize.css
+++ b/normalize.css
@@ -8,6 +8,14 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
+ * {
+   box-sizing: border-box;
+ }
+
+ figure {
+   margin: 0;
+ }
+
  html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
